--- a/src/app/views/dashboard.html
+++ b/src/app/views/dashboard.html
@@ -44,9 +44,6 @@
 </div>
 
 <div layout-gt-md="row">
-  <panel-widget flex-gt-md="60" title="Messages" template="app/views/partials/messages.html"></panel-widget>
-  <div layout="column" flex>
-    <panel-widget title="Performance" template="app/views/partials/progress.html" options="true"></panel-widget>
-    <panel-widget flex title="TODO list" template="app/views/partials/checkboxes.html"></panel-widget>
-  </div>
+  <panel-widget flex-gt-md="50" title="Performance" template="app/views/partials/progress.html" options="true"></panel-widget>
+  <panel-widget flex title="TODO list" template="app/views/partials/checkboxes.html"></panel-widget>
 </div>
