--- a/src/app/views/partials/messages.html
+++ b/src/app/views/partials/messages.html
@@ -8,7 +8,7 @@
         <md-item ng-repeat="message in vm.messages">
           <md-divider></md-divider>
           <md-item-content>
-            <md-icon flex-gt-md="10" flex="20" md-svg-icon="user"></md-icon>
+            <md-icon flex="20" md-svg-icon="user"></md-icon>
             <div class="md-tile-content">
               <h3>{{message.subject}}</h3>
               <h4>{{message.userName}}</h4>
@@ -25,7 +25,7 @@
         <md-item ng-repeat="message in vm.messages">
           <md-divider></md-divider>
           <md-item-content>
-            <md-icon flex-gt-md="10" flex="20" md-svg-icon="user"></md-icon>
+            <md-icon flex="20" md-svg-icon="user"></md-icon>
             <div class="md-tile-content">
               <h3>{{message.subject}}</h3>
               <h4>{{message.userName}}</h4>
@@ -42,7 +42,7 @@
         <md-item ng-repeat="message in vm.messages">
           <md-divider></md-divider>
           <md-item-content>
-            <md-icon flex-gt-md="10" flex="20" md-svg-icon="user"></md-icon>
+            <md-icon flex="20" md-svg-icon="user"></md-icon>
             <div class="md-tile-content">
               <h3>{{message.subject}}</h3>
               <h4>{{message.userName}}</h4>
@@ -59,7 +59,7 @@
         <md-item ng-repeat="message in vm.messages">
           <md-divider></md-divider>
           <md-item-content>
-            <md-icon flex-gt-md="10" flex="20" md-svg-icon="user"></md-icon>
+            <md-icon flex="20" md-svg-icon="user"></md-icon>
             <div class="md-tile-content">
               <h3>{{message.subject}}</h3>
               <h4>{{message.userName}}</h4>
