--- a/src/app/views/dashboard.html
+++ b/src/app/views/dashboard.html
@@ -39,11 +39,11 @@
 </md-grid-list>
 
 <div layout-gt-md="row">
-  <panel-widget flex-gt-md="50" title="Information Panel" template="app/views/partials/infoPanel.html"></panel-widget>
-  <panel-widget flex title="Autocomplete Input" template="app/views/partials/autocomplete.html" options="true"></panel-widget>
+  <panel-widget flex-gt-md="50" title="Information Panel" template="app/views/partials/infoPanel.html" theme="white"></panel-widget>
+  <panel-widget flex title="Autocomplete Input" template="app/views/partials/autocomplete.html" options="true" theme="white"></panel-widget>
 </div>
 
 <div layout-gt-md="row">
-  <panel-widget flex-gt-md="50" title="Performance" template="app/views/partials/progress.html" options="true"></panel-widget>
-  <panel-widget flex title="TODO list" template="app/views/partials/checkboxes.html"></panel-widget>
+  <panel-widget flex-gt-md="50" title="Performance" template="app/views/partials/progress.html" options="true" theme="white"></panel-widget>
+  <panel-widget flex title="TODO list" template="app/views/partials/checkboxes.html" theme="white"></panel-widget>
 </div>
