add link to github, update gitignore, update gulp version

--- a/src/app/views/main.html
+++ b/src/app/views/main.html
@@ -1,7 +1,9 @@
 <md-sidenav md-is-locked-open="$mdMedia('gt-sm')" md-component-id="left"
             class="md-whiteframe-z2 md-sidenav-left">
   <md-toolbar md-theme="white">
-    <h1 class="md-toolbar-tools" layout="row" layout-align="center center">AMD</h1>
+    <md-button  layout="row" layout-align="center center" class="md-toolbar-tools" href="https://github.com/flatlogic/angular-material-dashboard">
+      <h1>AMD</h1>
+    </md-button>
   </md-toolbar>
   <md-list>
     <md-item ng-repeat="item in vm.menuItems">
