--- a/src/app/views/dashboard.html
+++ b/src/app/views/dashboard.html
@@ -1,4 +1,4 @@
-<!-- TODO: use heading classes after update material to 0.9.0 -->
+<!-- TODO: use heading classes -->
 <!-- TODO: add tile directive -->
 <md-grid-list layout-margin flex md-cols="1" md-cols-gt-md="3" md-row-height="2:1" md-gutter="12px">
   <md-grid-tile class="md-whiteframe-z1 blue">
@@ -7,7 +7,6 @@
     </div>
     <md-grid-tile-footer>
       <div class="md-tile-content" layout="row">
-        <md-icon md-svg-icon="www"></md-icon>
         <h2 layout-padding>Site visitors</h2>
       </div>
     </md-grid-tile-footer>
@@ -19,7 +18,6 @@
     </div>
     <md-grid-tile-footer>
       <div class="md-tile-content" layout="row">
-        <md-icon md-svg-icon="notifications"></md-icon>
         <h2 layout-padding>Warnings</h2>
       </div>
     </md-grid-tile-footer>
@@ -31,7 +29,6 @@
     </div>
     <md-grid-tile-footer>
       <div class="md-tile-content" layout="row">
-        <md-icon md-svg-icon="memory"></md-icon>
         <h2 layout-padding>Memory load</h2>
       </div>
     </md-grid-tile-footer>
