--- a/src/app/views/main.html
+++ b/src/app/views/main.html
@@ -41,7 +41,7 @@
         </md-button>
     </md-toolbar>
 
-    <md-content flex class="md-padding">
+    <md-content flex class="md-padding page-content">
         <div ui-view></div>
     </md-content>
 </div>
