--- a/src/app/views/partials/progress.html
+++ b/src/app/views/partials/progress.html
@@ -6,7 +6,7 @@
     </md-radio-group>
   </md-content>
 
-  <md-content class="md-padding">
+  <md-content class="widget-content md-padding">
     <div layout-margin ng-repeat="data in vm.progressData">
       <div layout="row">
         <span>{{data.title}}</span>
