--- a/src/app/views/dashboard.html
+++ b/src/app/views/dashboard.html
@@ -1,44 +1,13 @@
-<!-- TODO: use heading classes -->
-<!-- TODO: add tile directive -->
-<md-grid-list layout-margin flex md-cols="1" md-cols-gt-md="3" md-row-height="2:1" md-gutter="12px">
-  <md-grid-tile class="md-whiteframe-z1 blue">
-    <div layout-fill layout="row" layout-align="center" class="md-tile-content">
-      <h2>Over 9000</h2>
-    </div>
-    <md-grid-tile-footer>
-      <div class="md-tile-content" layout="row">
-        <h2 layout-padding>Site visitors</h2>
-      </div>
-    </md-grid-tile-footer>
-  </md-grid-tile>
-
-  <md-grid-tile class="md-whiteframe-z1 orange">
-    <div layout-fill layout="row" layout-align="center" class="md-tile-content">
-      <h2>12</h2>
-    </div>
-    <md-grid-tile-footer>
-      <div class="md-tile-content" layout="row">
-        <h2 layout-padding>Warnings</h2>
-      </div>
-    </md-grid-tile-footer>
-  </md-grid-tile>
-
-  <md-grid-tile class="md-whiteframe-z1 green">
-    <div layout-fill layout="row" layout-align="center" class="md-tile-content">
-      <h2>42%</h2>
-    </div>
-    <md-grid-tile-footer>
-      <div class="md-tile-content" layout="row">
-        <h2 layout-padding>Memory load</h2>
-      </div>
-    </md-grid-tile-footer>
-  </md-grid-tile>
-</md-grid-list>
+<div layout-gt-md="row">
+  <panel-widget flex title="Site visitors" template="app/views/partials/visitors.html" class="fixed-height-widget"></panel-widget>
+  <panel-widget flex title="Warnings" template="app/views/partials/warnings.html" class="fixed-height-widget"></panel-widget>
+  <panel-widget flex title="Memory load" template="app/views/partials/memory.html" class="fixed-height-widget"></panel-widget>
+</div>
 
 <div layout-gt-md="row">
-  <panel-widget flex title="Information Panel" template="app/views/partials/infoPanel.html"></panel-widget>
-  <panel-widget flex title="Usage Stats" template="app/views/partials/usage.html"></panel-widget>
-  <panel-widget flex title="Autocomplete Input" template="app/views/partials/autocomplete.html" options="true"></panel-widget>
+  <panel-widget flex title="Information Panel" template="app/views/partials/infoPanel.html" class="fixed-height-widget"></panel-widget>
+  <panel-widget flex title="Usage Stats" template="app/views/partials/usage.html" class="fixed-height-widget"></panel-widget>
+  <panel-widget flex title="Autocomplete Input" template="app/views/partials/autocomplete.html" options="true" class="fixed-height-widget"></panel-widget>
 </div>
 
 <div layout-gt-md="row">
