--- a/src/app/views/partials/autocomplete.html
+++ b/src/app/views/partials/autocomplete.html
@@ -1,5 +1,5 @@
 <div  ng-controller="SearchController as vm">
-  <md-content ng-show="$showOptions" class="md-padding options">
+  <md-content ng-show="$showOptions" class="options">
     <md-radio-group ng-model="vm.disableCaching" >
       <md-radio-button  ng-value="true">Disable caching</md-radio-button>
       <md-radio-button  ng-value="false">Enable caching</md-radio-button>
