--- a/src/app/views/partials/progress.html
+++ b/src/app/views/partials/progress.html
@@ -1,12 +1,12 @@
 <div ng-controller="ProgressController as vm">
-  <md-content ng-show="$showOptions" class="md-padding options">
+  <md-content ng-show="$showOptions" class="options">
     <md-radio-group ng-model="vm.progressPeriod" ng-change="vm.changePeriod()">
       <md-radio-button  value="week">Last week</md-radio-button>
       <md-radio-button  value="month">Last month</md-radio-button>
     </md-radio-group>
   </md-content>
 
-  <md-content class="widget-content md-padding">
+  <md-content class="md-padding">
     <div layout-margin ng-repeat="data in vm.progressData">
       <div layout="row">
         <span>{{data.title}}</span>
