--- a/src/app/views/dashboard.html
+++ b/src/app/views/dashboard.html
@@ -5,7 +5,7 @@
 </div>
 
 <div layout-gt-md="row">
-  <panel-widget flex title="Information Panel" template="app/views/partials/infoPanel.html" class="fixed-height-widget"></panel-widget>
+  <panel-widget flex title="Server Control Panel" template="app/views/partials/controlPanel.html" class="fixed-height-widget"></panel-widget>
   <panel-widget flex title="Usage Stats" template="app/views/partials/usage.html" class="fixed-height-widget"></panel-widget>
   <panel-widget flex title="Autocomplete Input" template="app/views/partials/autocomplete.html" options="true" class="fixed-height-widget"></panel-widget>
 </div>
