--- a/src/app/views/partials/messages.html
+++ b/src/app/views/partials/messages.html
@@ -1,73 +1,70 @@
 <!-- TODO: move section element to directive -->
-<!-- TODO: replace md-icon to ng-src and fix images paths in build -->
 <div class="messages" ng-controller="MessagesController as vm">
-  <md-content class="messages-content">
-    <section>
-      <md-subheader class="md-primary">New Orders</md-subheader>
-      <md-list layout="column">
-        <md-item ng-repeat="message in vm.messages">
-          <md-divider></md-divider>
-          <md-item-content>
-            <md-icon flex="20" md-svg-icon="user"></md-icon>
-            <div class="md-tile-content">
-              <h3>{{message.subject}}</h3>
-              <h4>{{message.userName}}</h4>
-              <p>{{message.text}}</p>
-            </div>
-          </md-item-content>
-        </md-item>
-      </md-list>
-    </section>
+    <md-content class="messages-content">
+        <section>
+            <md-subheader class="md-accent">New Orders</md-subheader>
+            <md-list>
+                <md-list-item class="md-3-line" ng-repeat="message in vm.messages">
+                    <img class="md-avatar" ng-src="assets/images/einstein.jpg">
+                    <div class="md-list-item-text">
+                        <h3>{{message.subject}}</h3>
+                        <h4>{{message.userName}}</h4>
+                        <p>{{message.text}}</p>
+                    </div>
+                </md-list-item>
+            </md-list>
+        </section>
 
-    <section>
-      <md-subheader>Awaiting delivery</md-subheader>
-      <md-list layout="column">
-        <md-item ng-repeat="message in vm.messages">
-          <md-divider></md-divider>
-          <md-item-content>
-            <md-icon flex="20" md-svg-icon="user"></md-icon>
-            <div class="md-tile-content">
-              <h3>{{message.subject}}</h3>
-              <h4>{{message.userName}}</h4>
-              <p>{{message.text}}</p>
-            </div>
-          </md-item-content>
-        </md-item>
-      </md-list>
-    </section>
+        <section>
+            <md-subheader class="md-primary">Awaiting delivery</md-subheader>
+            <md-list>
+                <md-list-item class="md-3-line"
+                              ng-repeat="message in vm.messages">
+                    <img class="md-avatar" ng-src="assets/images/einstein.jpg">
 
-    <section>
-      <md-subheader class="md-accent">Delivered</md-subheader>
-      <md-list layout="column">
-        <md-item ng-repeat="message in vm.messages">
-          <md-divider></md-divider>
-          <md-item-content>
-            <md-icon flex="20" md-svg-icon="user"></md-icon>
-            <div class="md-tile-content">
-              <h3>{{message.subject}}</h3>
-              <h4>{{message.userName}}</h4>
-              <p>{{message.text}}</p>
-            </div>
-          </md-item-content>
-        </md-item>
-      </md-list>
-    </section>
+                    <div class="md-list-item-text">
+                        <h3>{{message.subject}}</h3>
+                        <h4>{{message.userName}}</h4>
 
-    <section>
-      <md-subheader class="md-warn">Problems reported</md-subheader>
-      <md-list layout="column">
-        <md-item ng-repeat="message in vm.messages">
-          <md-divider></md-divider>
-          <md-item-content>
-            <md-icon flex="20" md-svg-icon="user"></md-icon>
-            <div class="md-tile-content">
-              <h3>{{message.subject}}</h3>
-              <h4>{{message.userName}}</h4>
-              <p>{{message.text}}</p>
-            </div>
-          </md-item-content>
-        </md-item>
-      </md-list>
-    </section>
-  </md-content>
+                        <p>{{message.text}}</p>
+                    </div>
+                </md-list-item>
+            </md-list>
+        </section>
+
+        <section>
+            <md-subheader class="md-accent">Delivered</md-subheader>
+            <md-list>
+                <md-list-item class="md-3-line"
+                              ng-repeat="message in vm.messages">
+                    <img class="md-avatar" ng-src="assets/images/einstein.jpg">
+
+                    <div class="md-list-item-text">
+                        <h3>{{message.subject}}</h3>
+                        <h4>{{message.userName}}</h4>
+
+                        <p>{{message.text}}</p>
+                    </div>
+                </md-list-item>
+            </md-list>
+        </section>
+
+        <section>
+            <md-subheader class="md-warn">Problems reported</md-subheader>
+            <md-list>
+                <md-list-item class="md-3-line"
+                              ng-repeat="message in vm.messages">
+                    <img class="md-avatar" ng-src="assets/images/einstein.jpg">
+
+                    <div class="md-list-item-text">
+                        <h3>{{message.subject}}</h3>
+                        <h4>{{message.userName}}</h4>
+
+                        <p>{{message.text}}</p>
+                    </div>
+                </md-list-item>
+            </md-list>
+        </section>
+        <md-divider></md-divider>
+    </md-content>
 </div>
