--- a/src/app/views/partials/progress.html
+++ b/src/app/views/partials/progress.html
@@ -1,19 +1,12 @@
-<div ng-controller="ProgressController as vm">
+<div ng-controller="PerformanceController as vm">
   <md-content ng-show="$showOptions" class="options">
-    <md-radio-group ng-model="vm.progressPeriod" ng-change="vm.changePeriod()">
+    <md-radio-group ng-model="vm.performancePeriod" ng-change="vm.changePeriod()">
       <md-radio-button  value="week">Last week</md-radio-button>
       <md-radio-button  value="month">Last month</md-radio-button>
     </md-radio-group>
   </md-content>
 
   <md-content class="md-padding">
-    <div layout-margin ng-repeat="data in vm.progressData">
-      <div layout="row">
-        <span>{{data.title}}</span>
-        <span flex></span>
-        <span>{{data.value}}%</span>
-      </div>
-      <md-progress-linear md-theme={{data.theme}} md-mode="determinate" value={{data.value}}></md-progress-linear>
-    </div>
+    <nvd3 options="vm.chartOptions" data="vm.performanceChartData"></nvd3>
   </md-content>
 </div>
