adjust table styles

--- a/src/app/stylesheets/_custom.scss
+++ b/src/app/stylesheets/_custom.scss
@@ -151,3 +151,11 @@ md-radio-button.md-accent.md-checked .md-label span {
   border: none;
   font-weight: $font-weight-bold;
 }
+
+.orange .md-bar2 {
+  background-color: orange;
+}
+
+.orange .md-container {
+  background-color: rgb(255, 236, 201)
+}
