fix bug in firefox

--- a/src/app/views/main.html
+++ b/src/app/views/main.html
@@ -48,8 +48,8 @@
 
 <md-sidenav md-is-locked-open="$mdMedia('gt-sm')" md-component-id="right"
             class="md-whiteframe-z2 md-sidenav-right">
-    <md-toolbar layout="row" flex="80">
-        <md-toolbar class="md-warn" layout="row" layout-align="center center">
+    <md-toolbar layout="row">
+        <md-toolbar flex="80" class="md-warn" layout="row" layout-align="center center">
             <img class="img-circle" ng-src="assets/images/feynman.jpg">
             <md-menu>
                 <md-button class="capitalize" ng-click="$mdOpenMenu()" aria-label="Open menu">
